# pybamm-bayes

./: .gitignore  Bayesian Parameter Estimation DFN.ipynb  Bayesian Parameter Estimation SPMe.ipynb  LICENSE  Makefile  README.md  ncr_scratch.ipynb  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  tox.ini
.github/workflows/: test_on_push.yml
Python/: identifiability_problem.py  sampling.py  variable.py
battery_model_parameterization/: __init__.py
battery_model_parameterization/Python/: analysis.py  base_sampling_problem.py  battery_simulation.py  identifiability_problem.py  logger.py  logging.py  sampling.py  variable.py
paper/: paper.bib  paper.md
pybamm_bayes/: __init__.py  logging.py  variable.py
pybamm_bayes/analysis/: diagnostics.py  plotting.py  postprocessing.py  utils.py
pybamm_bayes/paper/: paper.bib  paper.md
pybamm_bayes/sampling_problems/: base_sampling_problem.py  bolfi_identifiability_analysis.py  degradation_parameter_estimation.py  mcmc_identifiability_analysis.py  mcmc_parameter_estimation.py  utils.py
pybamm_bayes/workflows/: bolfi_identifiability_analysis.py  mcmc_degradation_analysis.py  mcmc_degradation_analysis_dchg.py  mcmc_degradation_analysis_identifiability.py  mcmc_degradation_analysis_rest.py  mcmc_identifiability_analysis.py  parameter_estimation.py
scratch/: SN01_cycle_1.csv
scratch/ads_nmc_params/: nmc_scratch.ipynb  sample_analysis.ipynb
tests/: test_ci.py  test_identifiability_problem.py  test_logger.py  test_logging.py  test_sampling.py
tests/TEST_LOGS/: chain_0.csv  log_pdf_0.csv  log_pdf_1.csv  (+2 more)
(+88 files in other folders)
