[project]
name = "pybamm-bayes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "csv-logger>=1.3.0",
    "elfi>=0.8.6",
    "matplotlib>=3.9.4",
    "notebook>=7.3.2",
    "pints>=0.5.0",
    "plotly>=6.0.0",
    "pybamm[jax]>=25.1.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.1.1",
    "isort>=6.0.0",
]
